<?xml version="1.0"?>
<package>
  <name>collision_detector_diagnoser</name>
  <version>0.0.0</version>
  <description>The collision_detection_diagnoser package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jose@todo.todo">jose</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>fault_core</build_depend>
  <build_depend>fusion_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>footprint_checker</build_depend>
  <build_depend>kinetic_energy_monitor</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>fault_core</run_depend>
  <run_depend>fusion_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>footprint_checker</run_depend>
  <run_depend>kinetic_energy_monitor</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <fault_core plugin="${prefix}/fault_plugin.xml" />
  </export>
</package>
