<?xml version="1.0"?>
<package>
  <name>collisions_stuff</name>
  <version>1.0.0</version>
  <description>A Collision Detector and Recovery node compatible with b-it-bots repositories</description>

  <maintainer email="jocamaba1989@gmail.com">Jose Mayoral</maintainer>

  <license>GPLv3</license>

  <author email="jocamaba1989@gmail.com">Jose Mayoral</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  <metapackage/>
  </export>

</package>
