<?xml version="1.0"?>
<package>
  <name>collisions_stuff</name>
  <version>1.0.0</version>
  <description>A Collision Detector and Recovery node compatible with b-it-bots repositories</description>

  <maintainer email="jocamaba1989@gmail.com">Jose Mayoral</maintainer>

  <license>GPLv3</license>

  <author email="olima_84@yahoo.com">Oscar Lima</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>simple_costmap_layer</run_depend>
  <run_depend>simple_recovery_behavior</run_depend>
  <run_depend>simple_collision_detector</run_depend>
  <run_depend>simple_collision_recovery</run_depend>
  <run_depend>collisions_launch</run_depend>
  <run_depend>fault_core</run_depend>
  <run_depend>fusion_msgs</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>move_base_fault_tolerant</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
