<package>
    <name>move_base_fault_tolerant</name>
    <version>1.0.0</version>
    <description>
        The move_base_fault_tolerant package provides an extension of the move_base actionlib adding collisions detection and recovery abilities
    </description>
    <author>Jose Mayoral</author>
    <maintainer email="jocamaba1989@gmail.com">Jose Mayoral</maintainer>
    <license>BSD</license>
    <url>http://</url>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>actionlib</build_depend>
    <build_depend>cmake_modules</build_depend>
    <build_depend>costmap_2d</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>move_base</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>fault_core</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>visualization_msgs</build_depend>

<!--  This is commented out until rotate_recovery is ported to layered costmaps. <build_depend>rotate_recovery</build_depend> -->

    <run_depend>actionlib</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>message_runtime</run_depend>

    <run_depend>move_base</run_depend>
    <run_depend>move_base_msgs</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>fault_core</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>visualization_msgs</run_depend>

</package>
